--- a/.github/workflows/Docker-image.yml
+++ b/.github/workflows/Docker-image.yml
@@ -9,4 +9,4 @@ jobs:
      steps:
      - uses: actions/checkout@v2
      - name: Build the Docker image
-       run: docker build. --file Dockerfile --tag my-image-name:S(date +%5)
+       run: docker build . -t myimage1:1.0
