--- a/.github/workflows/Docker-image.yml
+++ b/.github/workflows/Docker-image.yml
@@ -10,3 +10,10 @@ jobs:
      - uses: actions/checkout@v2
      - name: Build the Docker image
        run: docker build . -t myimage1:1.0
+     - uses: docker/login-action@v2
+     - name: Login to docker hub
+       with:
+         username: ${{ secrets.DOCKERHUB_USERNAME }}
+         password: ${{ secrets.DOCKERHUB_TOKEN }}
+     
+     
