--- a/.github/workflows/Docker-image.yml
+++ b/.github/workflows/Docker-image.yml
@@ -7,12 +7,12 @@ jobs:
    build:
      runs-on: ubuntu-latest
      steps:
-     - uses: actions/checkout@v2
      - name: Build the Docker image
-       run: docker build . -t myimage1:1.0
+       uses: actions/checkout@v2
+     - run: docker build . -t myimage1:1.0
        
-     - uses: docker/login-action@v2
      - name: Login to docker hub
+       uses: docker/login-action@v2
        with:
          username: ${{ secrets.DOCKERHUB_USERNAME }}
          password: ${{ secrets.DOCKERHUB_TOKEN }}
