--- a/.github/workflows/Docker-image.yml
+++ b/.github/workflows/Docker-image.yml
@@ -14,7 +14,7 @@ jobs:
      - name: Login to docker hub
        uses: docker/login-action@v2
        with:
-         username: ${{ secrets.DOCKERHUB_USERNAME }}
-         password: ${{ secrets.DOCKERHUB_TOKEN }}
+         username: ${{ secrets.ranik123k }}
+         password: ${{ secrets.dckr_pat_6W67w47khS4-cW9-p1jWFVM4t2o }}
      
      
