--- a/.github/workflows/Docker-image.yml
+++ b/.github/workflows/Docker-image.yml
@@ -12,9 +12,23 @@ jobs:
      - run: docker build . -t myimage1:1.0
        
      - name: Login to docker hub
-       uses: docker/login-action@v2
+       uses: docker/login-action@v1
        with:
          username: ${{ secrets.ranik123k }}
          password: ${{ secrets.dckr_pat_6W67w47khS4-cW9-p1jWFVM4t2o }}
+         logout: true
+      
+     - name: push to docker hub
+       uses: docker/build-push-action@v2
+       with:
+         push: true
+         tags: <removed>:latest
+         
+     - name: Image digest
+       run: echo ${{ steps.docker_build.outputs.digest }}
+         
+         
+       
+     
      
      
