--- a/.github/workflows/Docker-image.yml
+++ b/.github/workflows/Docker-image.yml
@@ -26,6 +26,12 @@ jobs:
          
      - name: Image digest
        run: echo ${{ steps.docker_build.outputs.digest }}
+       
+     - name: Save state
+       run: echo "{name}={value}" >> $GITHUB_STATE
+
+     - name: Set output
+       run: echo "{name}={value}" >> $GITHUB_OUTPUT
          
          
        
