--- a/.github/workflows/Docker-image.yml
+++ b/.github/workflows/Docker-image.yml
@@ -14,8 +14,8 @@ jobs:
      - name: Login to docker hub
        uses: docker/login-action@v1
        with:
-         username: ${{ secrets.ranik123k }}
-         password: ${{ secrets.dckr_pat_6W67w47khS4-cW9-p1jWFVM4t2o }}
+         username: ${{ secrets.DOCKER_USERNAME }}
+         password: ${{ secrets.DOCKER_PASSWORD }}
          logout: true
       
      - name: push to docker hub
